# sleeper_py

./: .gitignore  README.md  pyproject.toml
cache/: league_1265656840373403648.json  matchups_1265656840373403648_week_1.json  matchups_1265656840373403648_week_10.json  matchups_1265656840373403648_week_11.json  matchups_1265656840373403648_week_12.json  matchups_1265656840373403648_week_13.json  matchups_1265656840373403648_week_14.json  matchups_1265656840373403648_week_15.json  matchups_1265656840373403648_week_16.json  matchups_1265656840373403648_week_17.json  matchups_1265656840373403648_week_18.json  matchups_1265656840373403648_week_2.json  matchups_1265656840373403648_week_3.json  matchups_1265656840373403648_week_4.json  matchups_1265656840373403648_week_5.json  matchups_1265656840373403648_week_6.json  matchups_1265656840373403648_week_7.json  matchups_1265656840373403648_week_8.json  matchups_1265656840373403648_week_9.json  rosters_1265656840373403648.json  users_1265656840373403648.json
ipy_sessions/: ipy_sess.py  ipy_sess2.py
sleeper_py/: main.py  pyproject.toml  uv-dependencies-20251127.txt
