[project]
name = "uv-sleeper-py"
version = "0.1.0"
requires-python = ">=3.13"


description = "Add your description here"
readme = "README.md"

dependencies = [
    "jmespath>=1.0.1",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "textual>=6.6.0",
]

[dependency-groups]
dev = [
    "ipython>=9.7.0",
]
